fixed a bug in JsonTypeExtension